--- a/_columns/Swing_Trading/zh-cn/2024-09-20.md
+++ b/_columns/Swing_Trading/zh-cn/2024-09-20.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  How Early Buying At The Green Light Won The Race For Ferrari Stock	在 The Green Light 提前购买如何赢得法拉利股票的竞争
+  How Early Buying At The Green Light Won The Race For Ferrari Stock
 date: 2024-09-20 13:30 -0700
 image: /assets/img/swing-trading/2024-09-20.jpg
 author: JUSTIN NIELSEN
@@ -11,31 +11,19 @@ author: JUSTIN NIELSEN
 
 
 
-There's nothing wrong with starting a position small to test the waters. But the quicker you can add to the position once it starts working, the lower your average cost. The lower your average cost, the more flexibility you have to handle the position. That was what helped turn Ferrari stock into a winning trade.  
-从小处着手试水并没有错。但是，一旦它开始运作，您可以越快地添加到头寸中，您的平均成本就越低。您的平均成本越低，您处理该职位的灵活性就越大。这就是帮助法拉利股票成为一笔获胜交易的原因。
+There's nothing wrong with starting a position small to test the waters. But the quicker you can add to the position once it starts working, the lower your average cost. The lower your average cost, the more flexibility you have to handle the position. That was what helped turn Ferrari stock into a winning trade.
 
 
 
 
-Revving Up The Ferrari Stock Position加快法拉利股票头寸
-----------------------------------------------
+Revving Up The Ferrari Stock Position
+-------------------------------------
 
 
-For six months **Ferrari** ([RACE](https://research.investors.com/quote.aspx?symbol=RACE)) seemed to be stuck in idle. When it finally shot up on Aug. 14, a number of components switched decidedly in its favor **(1)**. A [follow-through day](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/) triggered just the day before, and Ferrari was one of the first stocks hitting highs that day.  
-六个月来，**法拉利** （[RACE）](https://research.investors.com/quote.aspx?symbol=RACE) 似乎陷入了闲置状态。当它最终在 8 月 14 日爆发时，许多组件果断地转向了对它有利**的 （1）。**就在前一天触发了[后续交易日](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/)，法拉利是当天首批触及高点的股票之一。
+For six months **Ferrari** ([RACE](https://research.investors.com/quote.aspx?symbol=RACE)) seemed to be stuck in idle. When it finally shot up on Aug. 14, a number of components switched decidedly in its favor **(1)**. A [follow-through day](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/) triggered just the day before, and Ferrari was one of the first stocks hitting highs that day.
 
 
-Ferrari joined [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) at 439.68 as a half position and we scaled into it as it progressed throughout the day. We added another quarter when we had 2.25% progress on our first buy and then another quarter when we made an additional 1% of progress. Though we made three buys that day, our average cost was 445.67 and the stock closed at 452.90. We had a full position with a 1.6% gain, giving us some options in case there was temporary weakness.  
-法拉利以 439.68 的价格加入 [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) 作为半位，随着它全天的进展，我们扩大了它。当我们在第一次购买时取得了 2.25% 的进展，我们又增加了一个季度，然后又增加了一个季度，当时我们又取得了 1% 的进展。虽然我们那天买了 3 次，但我们的平均成本为 445.67，股票收于 452.90。我们有一个完整的头寸，上涨了 1.6%，这为我们提供了一些选择，以防出现暂时的疲软。
-
-
-
-
----
-
-
-[**How does this rally stack up? Eric Krull uses history to give him a potential trajectory.  
-这次反弹如何叠加？埃里克·克鲁尔 （Eric Krull） 利用历史为他提供了一条潜在的轨迹。**](https://www.investors.com/ibd-videos/videos/how-to-cope-with-wild-market-swings-as-fed-cuts-rates)
+Ferrari joined [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) at 439.68 as a half position and we scaled into it as it progressed throughout the day. We added another quarter when we had 2.25% progress on our first buy and then another quarter when we made an additional 1% of progress. Though we made three buys that day, our average cost was 445.67 and the stock closed at 452.90. We had a full position with a 1.6% gain, giving us some options in case there was temporary weakness.
 
 
 
@@ -43,63 +31,59 @@ Ferrari joined [SwingTrader](http://shop.investors.com/offer/splashresponsive.as
 ---
 
 
-Weakness wasn't a problem we had to worry about. In just over a week, Ferrari sped higher and we had a 7.9% gain from our average cost **(2)**. Given the number of gains in a row, we trimmed the position by a quarter just to lock in some profits. Locking in a little can also help hold a stock for longer and a bigger gain.  
-虚弱不是我们需要考虑的问题。在短短一周多的时间里，法拉利加速上涨，我们的平均成本提高了 7.9% **（2）。**鉴于连续上涨的数量，我们将头寸削减了四分之一，只是为了锁定一些利润。锁定一点也有助于持有股票更长时间并获得更大的收益。
+[**How does this rally stack up? Eric Krull uses history to give him a potential trajectory.**](https://www.investors.com/ibd-videos/videos/how-to-cope-with-wild-market-swings-as-fed-cuts-rates)
 
 
-September Starts On Rocky Road九月从崎岖之路开始
----------------------------------------
 
 
-Ferrari started September with a jolt **(3)**. But the stock held above its 10-day line when the Nasdaq composite and S&P 500 both crossed below their 21-day lines. Since we had already taken some profits, we were trying to give the stock room.  
-法拉利以颠簸 **（3） 开始 9** 月。但当纳斯达克综合指数和标准普尔 500 指数均跌破 21 日线时，该股保持在 10 日线上方。由于我们已经获得了一些利润，因此我们试图提供库存空间。
+---
 
 
-When Ferrari did cross below its 10-day line for the first time since our entry, the first two days initially tried to close well off lows and in the upper part of its range **(4)**. It was right around where we took our initial profit.  
-当法拉利自我们进入以来首次跌破其 10 日线时，前两天最初试图收于远低于低点并处于其区间的上部 **（4）。**这正好是我们获得初始利润的地方。
+Weakness wasn't a problem we had to worry about. In just over a week, Ferrari sped higher and we had a 7.9% gain from our average cost **(2)**. Given the number of gains in a row, we trimmed the position by a quarter just to lock in some profits. Locking in a little can also help hold a stock for longer and a bigger gain.
 
 
-But by the end of the week the markets started looking worse and we needed to scale back our exposure **(5)**. We sold another quarter to lock in gains. We were down to just 30% exposure overall and tried to keep the best stocks that we had gains on. With as many snapbacks as we've seen this year, going fully to cash can make it more difficult to ramp up exposure on the bounce.  
-但到了周末，市场开始变得更糟，我们需要缩减敞口 **（5）。**我们又卖出了一个季度以锁定收益。我们总体上只剩下 30% 的风险敞口，并试图保留我们获利的最佳股票。由于我们今年看到的快照回归次数如此之多，完全使用现金可能会使增加反弹的敞口变得更加困难。
+September Starts On Rocky Road
+------------------------------
 
 
-Why This S&P 500 Expectation Breaker Was Different为什么这个标准普尔 500 指数预期打破者与众不同
----------------------------------------------------------------------------
+Ferrari started September with a jolt **(3)**. But the stock held above its 10-day line when the Nasdaq composite and S&P 500 both crossed below their 21-day lines. Since we had already taken some profits, we were trying to give the stock room.
 
 
-Ferrari did try to make a stand at its 21-day line **(6)** and we added a quarter position back that day. But we removed it the next day **(7)**, plus an extra quarter when there was no follow-through on the reversal.  
-法拉利确实试图在其 21 天线 **（6）** 上站稳脚跟，我们在那天增加了四分之一的位置。但我们在第二天 **（7）** 删除了它，再加上一个额外的季度，因为没有对反向进行后续操作。
+When Ferrari did cross below its 10-day line for the first time since our entry, the first two days initially tried to close well off lows and in the upper part of its range **(4)**. It was right around where we took our initial profit.
 
 
-Our final exit came a few days later when Ferrari seemed stuck below its 21-day line **(8)**. The early scaling up and the early profit-taking combined to make the trade very forgiving and leave us with a 4.5% gain. But that might not be all. The gap-up back above the 21-day line **(9)** gave us another chance at the stock and we started a new half position.  
-几天后，我们最后一次退出，当时法拉利似乎停滞在其 21 天线 **（8）** 下方。早期的扩大和早期的获利回吐相结合，使交易非常宽容，并为我们留下了 4.5% 的收益。但这可能还不是全部。跳空回 21 日线 **（9）** 上方给了我们另一个看好股票的机会，我们开始了新的半仓。
+But by the end of the week the markets started looking worse and we needed to scale back our exposure **(5)**. We sold another quarter to lock in gains. We were down to just 30% exposure overall and tried to keep the best stocks that we had gains on. With as many snapbacks as we've seen this year, going fully to cash can make it more difficult to ramp up exposure on the bounce.
 
 
-We'll see if there's more in the gas tank for this one.  
-我们将看看这个油箱里是否有更多。
+Why This S&P 500 Expectation Breaker Was Different
+--------------------------------------------------
 
 
-*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).  
-SwingTrader 的订阅者和试用者可以访问有关过去交易的更多详细信息。提供[免费试用](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。在 X 上关注尼尔森，前身为 Twitter，网址为 [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen)。*
+Ferrari did try to make a stand at its 21-day line **(6)** and we added a quarter position back that day. But we removed it the next day **(7)**, plus an extra quarter when there was no follow-through on the reversal.
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+Our final exit came a few days later when Ferrari seemed stuck below its 21-day line **(8)**. The early scaling up and the early profit-taking combined to make the trade very forgiving and leave us with a 4.5% gain. But that might not be all. The gap-up back above the 21-day line **(9)** gave us another chance at the stock and we started a new half position.
 
 
-[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.  
-想知道我们的波段交易策略吗？观看此每周更新。](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
+We'll see if there's more in the gas tank for this one.
 
 
-[Warren Buffett turned 94! How different is his trading style from The IBD Methodology?  
-沃伦·巴菲特 （Warren Buffett） 94 岁了！他的交易风格与 IBD 方法有何不同？](https://www.investors.com/how-to-invest/warren-buffett-lessons-active-growth-investors/)
+*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).*
 
 
-[How To Use Key Metrics To Stay Ahead Of The Market  
-如何使用关键指标保持市场领先地位](https://www.investors.com/ibd-videos/videos/how-to-use-key-stock-metrics-to-stay-ahead-of-the-market-and-find-winners)
+**YOU MAY ALSO LIKE:**
 
 
-[Follow Premarket And After-The-Open Action With IBD Experts  
-跟随 IBD 专家的盘前和开盘后行动](https://get.investors.com/ibd-live/)
+[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
+
+
+[Warren Buffett turned 94! How different is his trading style from The IBD Methodology?](https://www.investors.com/how-to-invest/warren-buffett-lessons-active-growth-investors/)
+
+
+[How To Use Key Metrics To Stay Ahead Of The Market](https://www.investors.com/ibd-videos/videos/how-to-use-key-stock-metrics-to-stay-ahead-of-the-market-and-find-winners)
+
+
+[Follow Premarket And After-The-Open Action With IBD Experts](https://get.investors.com/ibd-live/)
 
 
 
