--- a/_columns/Stock_Of_the_Day/zh-cn/2024-10-16.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-10-16.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Amazon Goes Nuclear, Sending IBD's Stock Of The Day Skyward	亚马逊走向核能市场，IBD 的今日股票飙升
+  Amazon Goes Nuclear, Sending IBD's Stock Of The Day Skyward
 image: /assets/img/stock-of-the-day/2024-10-16.jpg
 date: 2024-10-16 16:13 -0700
 author: KIT NORTON
@@ -12,37 +12,37 @@ author: KIT NORTON
 
 
 
-**Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) announced Wednesday that it's joining the nuclear renaissance, sending nuclear-related stocks higher, including **Cameco** ([CCJ](https://research.investors.com/quote.aspx?symbol=CCJ)), Wednesday's [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/).  
+**Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) announced Wednesday that it's joining the nuclear renaissance, sending nuclear-related stocks higher, including **Cameco** ([CCJ](https://research.investors.com/quote.aspx?symbol=CCJ)), Wednesday's [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/).
 
 
 
 
-The uranium refiner broke out past a buy point after Amazon said it has signed agreements to develop the emerging small modular reactor technology — joining a growing list of tech giants that are investing in nuclear power to run data centers.  
+The uranium refiner broke out past a buy point after Amazon said it has signed agreements to develop the emerging small modular reactor technology — joining a growing list of tech giants that are investing in nuclear power to run data centers.
 
 
-[S&P 500 leader](https://www.investors.com/news/sp500-vistra-stock-constellation-energy-stock-lag-market/) **Vistra** ([VST](https://research.investors.com/quote.aspx?symbol=VST)) and small-modular reactor play **Oklo** ([OKLO](https://research.investors.com/quote.aspx?symbol=OKLO)) were among the other nuclear-powered stocks.  
+[S&P 500 leader](https://www.investors.com/news/sp500-vistra-stock-constellation-energy-stock-lag-market/) **Vistra** ([VST](https://research.investors.com/quote.aspx?symbol=VST)) and small-modular reactor play **Oklo** ([OKLO](https://research.investors.com/quote.aspx?symbol=OKLO)) were among the other nuclear-powered stocks.
 
 
-Top hyperscalers — the largest cloud, data center and AI operators — include Amazon.com, **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)), **Meta** ([META](https://research.investors.com/quote.aspx?symbol=META)) and **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)). Amazon's decision to invest in small modular reactors, or SMRs, comes just a day after a similar announcement by Google. SMRs do not currently exist but there are a number of companies working to develop the technology.  
+Top hyperscalers — the largest cloud, data center and AI operators — include Amazon.com, **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)), **Meta** ([META](https://research.investors.com/quote.aspx?symbol=META)) and **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)). Amazon's decision to invest in small modular reactors, or SMRs, comes just a day after a similar announcement by Google. SMRs do not currently exist but there are a number of companies working to develop the technology.
 
 
-In late September, **Constellation Energy** ([CEG](https://research.investors.com/quote.aspx?symbol=CEG)) announced a [two-decade contract with **Microsoft**](https://www.investors.com/news/sp-500-nuclear-inks-microsoft-deal-three-mile-island-restart/) to provide nuclear power for the tech giant's data centers. The deal involves reopening Pennsylvania's Three Mile Island Unit 1, which had been idle since 2019. Three Mile Island's Unit 2 reactor has been shut down since the 1979, after the partial meltdown at the nuclear power plant.  
+In late September, **Constellation Energy** ([CEG](https://research.investors.com/quote.aspx?symbol=CEG)) announced a [two-decade contract with **Microsoft**](https://www.investors.com/news/sp-500-nuclear-inks-microsoft-deal-three-mile-island-restart/) to provide nuclear power for the tech giant's data centers. The deal involves reopening Pennsylvania's Three Mile Island Unit 1, which had been idle since 2019. Three Mile Island's Unit 2 reactor has been shut down since the 1979, after the partial meltdown at the nuclear power plant.
 
 
-Morgan Stanley analyst David Arcaro wrote that the Constellation-Microsoft deal "[proves out the value of nuclear power for hyperscalers](https://www.investors.com/news/sp500-constellation-energy-price-target-hikes-microsoft-nuclear-power-deal/), with higher prices for future deals."  
+Morgan Stanley analyst David Arcaro wrote that the Constellation-Microsoft deal "[proves out the value of nuclear power for hyperscalers](https://www.investors.com/news/sp500-constellation-energy-price-target-hikes-microsoft-nuclear-power-deal/), with higher prices for future deals."
 
 
-This is good news for Canada-based Cameco, which is one of the world's largest providers of uranium with utilities around the globe relying on the company to provide nuclear fuel solutions.  
+This is good news for Canada-based Cameco, which is one of the world's largest providers of uranium with utilities around the globe relying on the company to provide nuclear fuel solutions.
 
 
 AI And Nuclear
 --------------
 
 
-So far in 2024, nuclear power and utility stocks have been riding the artificial intelligence energy wave.  
+So far in 2024, nuclear power and utility stocks have been riding the artificial intelligence energy wave.
 
 
-Artificial intelligence — and the data centers needed to train the systems — are expected to boost energy demand throughout this decade. In the U.S., McKinsey & Co. projects that data center energy demand will grow from around 4% currently to 11%-12% by 2030.  
+Artificial intelligence — and the data centers needed to train the systems — are expected to boost energy demand throughout this decade. In the U.S., McKinsey & Co. projects that data center energy demand will grow from around 4% currently to 11%-12% by 2030.
 
 
 
@@ -58,61 +58,60 @@ Artificial intelligence — and the data centers needed to train the systems —
 ---
 
 
-Many technology companies are investing in or partnering with nuclear power providers to ensure energy supplies for their data centers.  
+Many technology companies are investing in or partnering with nuclear power providers to ensure energy supplies for their data centers.
 
 
-Morgan Stanley analysts have proclaimed in recent months that a "nuclear renaissance" is underway.  
+Morgan Stanley analysts have proclaimed in recent months that a "nuclear renaissance" is underway.
 
 
-They wrote that nuclear power, while still a divisive issue, is making a comeback. The firm sees $1.5 trillion in investment in new capacity through 2050.  
+They wrote that nuclear power, while still a divisive issue, is making a comeback. The firm sees $1.5 trillion in investment in new capacity through 2050.
 
 
 Cameco Stock Performance
 ------------------------
 
 
-CCJ stock jumped 7.9% to 55.78 during [market trade](https://www.investors.com/category/market-trend/stock-market-today/) on Wednesday, gapping above a 52.32 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/). The buy zone runs to 54.94.  
+CCJ stock jumped 7.9% to 55.78 during [market trade](https://www.investors.com/category/market-trend/stock-market-today/) on Wednesday, gapping above a 52.32 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/). The buy zone runs to 54.94.
 
 
-Cameco stock has gained around 30% in 2024. The stock dropped more than 10% in August but has rebounded powerfully since early September.  
+Cameco stock has gained around 30% in 2024. The stock dropped more than 10% in August but has rebounded powerfully since early September.
 
 
 
-Along with Cameco on Wednesday, [S&P 500 leader](https://www.investors.com/news/sp500-vistra-stock-constellation-energy-stock-lag-market/) Vistra, a nuclear power utilities play, jumped 5.7%. Fellow S&P 500 component Constellation Energy advanced 5.1%.  
+Along with Cameco on Wednesday, [S&P 500 leader](https://www.investors.com/news/sp500-vistra-stock-constellation-energy-stock-lag-market/) Vistra, a nuclear power utilities play, jumped 5.7%. Fellow S&P 500 component Constellation Energy advanced 5.1%.
 
 
-Meanwhile, **Uranium Energy** ([UEC](https://research.investors.com/quote.aspx?symbol=UEC)) leapt 8.4%. Uranium Energy engages in uranium exploration and development in the U.S. Southwest and Paraguay.  
+Meanwhile, **Uranium Energy** ([UEC](https://research.investors.com/quote.aspx?symbol=UEC)) leapt 8.4%. Uranium Energy engages in uranium exploration and development in the U.S. Southwest and Paraguay.
 
 
-Oklo — the nuclear power startup backed by OpenAI head Sam Altman and with Peter Thiel as a major investor — surged 40.5% after clearing an early entry Tuesday. Fellow SMR-focused company **Nano Nuclear Energy** ([NNE](https://research.investors.com/quote.aspx?symbol=NNE)) leapt 37.8%. **NuScale Power** ([SMR](https://research.investors.com/quote.aspx?symbol=SMR)) soared 40%.  
+Oklo — the nuclear power startup backed by OpenAI head Sam Altman and with Peter Thiel as a major investor — surged 40.5% after clearing an early entry Tuesday. Fellow SMR-focused company **Nano Nuclear Energy** ([NNE](https://research.investors.com/quote.aspx?symbol=NNE)) leapt 37.8%. **NuScale Power** ([SMR](https://research.investors.com/quote.aspx?symbol=SMR)) soared 40%.
 
 
-ARK Invest's Cathie Wood has been [building a position](https://www.investors.com/news/nuclear-sam-altman-startup-oklo-earnings-political-backing/) in Oklo worth more than $2 million since mid-July.  
-自 7 月中旬以来，ARK Invest 的 Cathie Wood 一直在 Oklo 建立价值超过 200 万美元的[头寸](https://www.investors.com/news/nuclear-sam-altman-startup-oklo-earnings-political-backing/)。
+ARK Invest's Cathie Wood has been [building a position](https://www.investors.com/news/nuclear-sam-altman-startup-oklo-earnings-political-backing/) in Oklo worth more than $2 million since mid-July.
 
 
-Cameco stock has a 78 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/) out of a best-possible 99. It has a 84 [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/) and a 42 [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/).  
+Cameco stock has a 78 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/) out of a best-possible 99. It has a 84 [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/) and a 42 [EPS Rating](https://www.investors.com/how-to-invest/investors-corner/eps-rating-is-key-to-picking-great-stocks/).
 
 
-*Please follow Kit Norton on X [@KitNorton](https://twitter.com/KitNorton) for more coverage.* 
+*Please follow Kit Norton on X [@KitNorton](https://twitter.com/KitNorton) for more coverage.*
 
 
 #### **YOU MAY ALSO LIKE:**
 
 
-[Is Tesla Stock A Buy Or A Sell?](https://www.investors.com/news/tesla-stock-a-buy-or-a-sell-in-2024/) 
+[Is Tesla Stock A Buy Or A Sell?](https://www.investors.com/news/tesla-stock-a-buy-or-a-sell-in-2024/)
 
 
-[Get Full Access To IBD Stock Lists And Ratings](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital) 
+[Get Full Access To IBD Stock Lists And Ratings](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
-[Learning How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/) 
+[Learning How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
 
 
-[AI Is Fueling A 'Nuclear Renaissance.' Bill Gates And Jeff Bezos Are In The Mix.](https://www.investors.com/news/artificial-intelligence-ai-data-centers-demand-nuclear-energy/) 
+[AI Is Fueling A 'Nuclear Renaissance.' Bill Gates And Jeff Bezos Are In The Mix.](https://www.investors.com/news/artificial-intelligence-ai-data-centers-demand-nuclear-energy/)
 
 
-[Futures: Nvidia Rises In Buy Area; Why Nuclear Stocks Are Radioactive Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-buy-area-taiwan-semi-earnings-nuclear-stocks/) 
+[Futures: Nvidia Rises In Buy Area; Why Nuclear Stocks Are Radioactive Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-buy-area-taiwan-semi-earnings-nuclear-stocks/)
 
 
 
