--- a/_columns/Stock_Of_the_Day/zh-cn/2024-10-21.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-10-21.md
@@ -1,85 +1,103 @@
 ---
 layout: page
 title: >-
-  Cboe Shares Near Buy Point As 2024 Election Promises Volatility
+  Cboe Shares Near Buy Point As 2024 Election Promises Volatility	芝加哥期权交易所股价接近买入点，因为 2024 年大选有望带来波动
 image: /assets/img/stock-of-the-day/2024-10-21.jpg
 date: 2024-10-21 15:24 -0700
 author: JED GRAHAM
 ---
 
-![](https://www.investors.com/wp-content/uploads/2024/10/sotd-for-10-21-2024-desktop.png)Cboe Global Markets is the IBD Stock Of The Day as the trading exchange operator stands to benefit from increased volatility around the 2024 election.
+![](https://www.investors.com/wp-content/uploads/2024/10/sotd-for-10-21-2024-desktop.png)Cboe Global Markets is the IBD Stock Of The Day as the trading exchange operator stands to benefit from increased volatility around the 2024 election.  
+Cboe Global Markets 是当今 IBD 股票，因为该交易交易所运营商将从 2024 年大选前后波动性增加中受益。
 
 
 
 
 
 
-**Cboe Global Markets** ([CBOE](https://research.investors.com/quote.aspx?symbol=CBOE)) is Monday's [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the trading exchange operator stands to benefit from increased volatility ahead of the 2024 election. Cboe stock, which is rallying off key support, is within just 1% of an early entry.
+**Cboe Global Markets** ([CBOE](https://research.investors.com/quote.aspx?symbol=CBOE)) is Monday's [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the trading exchange operator stands to benefit from increased volatility ahead of the 2024 election. Cboe stock, which is rallying off key support, is within just 1% of an early entry.  
+**Cboe Global Markets** （[CBOE）](https://research.investors.com/quote.aspx?symbol=CBOE) 是周一的 [IBD 今日股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为该交易交易所运营商将在 2024 年大选之前从波动性增加中受益。芝加哥期权交易所（Cboe）股票从关键支撑位反弹，距离早盘入场仅 1%。
 
 
-With Q3 reporting dates approaching for exchanges, analysts have leaned into their bullish commentary, saying results should benefit from strong trading activity induced by higher equity market volatility. Further, Piper Sandler said the group should continue benefiting from persistent volatility around the 2024 election. Piper Sandler hiked its Cboe price target to 220 from 210 on Oct. 8, and kept its outperform rating.
+With Q3 reporting dates approaching for exchanges, analysts have leaned into their bullish commentary, saying results should benefit from strong trading activity induced by higher equity market volatility. Further, Piper Sandler said the group should continue benefiting from persistent volatility around the 2024 election. Piper Sandler hiked its Cboe price target to 220 from 210 on Oct. 8, and kept its outperform rating.  
+随着交易所第三季度报告日期的临近，分析师倾向于他们的看涨评论，称结果应该会受益于股市波动性上升引起的强劲交易活动。此外，Piper Sandler 表示，该集团应该继续从 2024 年大选前后的持续波动中受益。Piper Sandler 在 10 月 8 日将其芝加哥期权交易所目标价从 210 上调至 220，并维持其跑赢大盘评级。
 
 
 
 
-Active Trading In Q3
---------------------
+Active Trading In Q3 第三季度交易活跃
+-----------------------------
 
 
-Cboe posted record average daily volume of 4.23 million contracts in Q3 for its proprietary index options, the firm said on Oct. 3. That includes the second-best daily volume of 980,000 contracts for its Cboe Volatility Index ([0VIX](https://research.investors.com/quote.aspx?symbol=0VIX)) options, which are used to hedge S&P 500 risk.
+Cboe posted record average daily volume of 4.23 million contracts in Q3 for its proprietary index options, the firm said on Oct. 3. That includes the second-best daily volume of 980,000 contracts for its Cboe Volatility Index ([0VIX](https://research.investors.com/quote.aspx?symbol=0VIX)) options, which are used to hedge S&P 500 risk.  
+芝加哥期权交易所 （Cboe） 于 10 月 3 日表示，其专有指数期权在第三季度的日均交易量达到创纪录的 423 万份合约。这包括其 Cboe 波动率指数 （[0VIX](https://research.investors.com/quote.aspx?symbol=0VIX)） 期权的第二高日交易量 980,000 份合约，用于对冲标准普尔 500 指数的风险。
 
 
-Cboe posts Q3 results on Nov. 1. **CME Group** ([CME](https://research.investors.com/quote.aspx?symbol=CME)) reports on Wednesday, **Nasdaq** ([NDAQ](https://research.investors.com/quote.aspx?symbol=NDAQ)) on Thursday, and **Intercontinental Exchange** ([ICE](https://research.investors.com/quote.aspx?symbol=ICE)) on Oct. 31.
+Cboe posts Q3 results on Nov. 1. **CME Group** ([CME](https://research.investors.com/quote.aspx?symbol=CME)) reports on Wednesday, **Nasdaq** ([NDAQ](https://research.investors.com/quote.aspx?symbol=NDAQ)) on Thursday, and **Intercontinental Exchange** ([ICE](https://research.investors.com/quote.aspx?symbol=ICE)) on Oct. 31.  
+Cboe 于 11 月 1 日发布第三季度业绩。**芝商所** （[CME](https://research.investors.com/quote.aspx?symbol=CME)） 周三发布财报，**纳斯达克** （[NDAQ](https://research.investors.com/quote.aspx?symbol=NDAQ)） 周四发布财报，洲际**交易所** （[ICE](https://research.investors.com/quote.aspx?symbol=ICE)） 10 月 31 日发布财报。
 
 
-Cboe's SPX index options are the mostly actively traded index options in the U.S., providing exposure to the large-cap index as well as options for managing risk.
+Cboe's SPX index options are the mostly actively traded index options in the U.S., providing exposure to the large-cap index as well as options for managing risk.  
+Cboe 的 SPX 指数期权是美国交易最活跃的指数期权，提供大盘股指数的敞口以及管理风险的选择。
 
 
-Oppenheimer raised its Cboe price target to 227 from 209 on Oct. 14, keeping an outperform rating. The firm highlighted its new focus of putting buybacks ahead of acquisitions, while stabilizing margins and reaching for growth among overseas investors.
+Oppenheimer raised its Cboe price target to 227 from 209 on Oct. 14, keeping an outperform rating. The firm highlighted its new focus of putting buybacks ahead of acquisitions, while stabilizing margins and reaching for growth among overseas investors.  
+Oppenheimer 在 10 月 14 日将其 Cboe 目标价从 209 上调至 227，维持跑赢大盘评级。该公司强调了其新的重点，即将回购置于收购之前，同时稳定利润率并在海外投资者中实现增长。
 
 
-Volatility Fuels Cboe, Exchange Stocks
---------------------------------------
+Volatility Fuels Cboe, Exchange Stocks波动性助长了 Cboe、交易所股票
+-------------------------------------------------------
 
 
-Volatility soared at the start of August when the jobs report for July came in unexpectedly soft, stoking recession fears. That coincided with an Aug. 2 breakout for Cboe stock from a cup-with-handle base.
+Volatility soared at the start of August when the jobs report for July came in unexpectedly soft, stoking recession fears. That coincided with an Aug. 2 breakout for Cboe stock from a cup-with-handle base.  
+8 月初，当 7 月就业报告出乎意料地疲软时，波动性飙升，引发了对经济衰退的担忧。这与 8 月 2 日芝加哥期权交易所股票从带手柄杯底部突破相吻合。
 
 
-More solid jobs data since then has calmed markets, but several factors could conspire to shake things up. Any further hints that inflation is sticking around could jolt markets and the Federal Reserve's rate-cut outlook. More direct military exchanges between Israel and Iran remain a risk. Plus, the VIX index rose sharply in the period just before Election Day in 2016 and 2024, and a repeat wouldn't be a surprise.
+More solid jobs data since then has calmed markets, but several factors could conspire to shake things up. Any further hints that inflation is sticking around could jolt markets and the Federal Reserve's rate-cut outlook. More direct military exchanges between Israel and Iran remain a risk. Plus, the VIX index rose sharply in the period just before Election Day in 2016 and 2024, and a repeat wouldn't be a surprise.  
+自那以后，更稳健的就业数据使市场平静下来，但有几个因素可能会共同改变局面。任何关于通胀持续存在的进一步暗示都可能震动市场和美联储的降息前景。以色列和伊朗之间更直接的军事交流仍然是一个风险。此外，VIX 指数在 2016 年和 2024 年选举日之前急剧上涨，再次出现也就不足为奇了。
 
 
-Strategists at Morgan Stanley Wealth Management wrote last week that the 2024 election "may be particularly volatile, given the potential for delayed election results as well as macroeconomic and geopolitical concerns."
+Strategists at Morgan Stanley Wealth Management wrote last week that the 2024 election "may be particularly volatile, given the potential for delayed election results as well as macroeconomic and geopolitical concerns."  
+摩根士丹利财富管理（Morgan Stanley Wealth Management）的策略师上周写道，2024年大选“考虑到选举结果可能延迟以及宏观经济和地缘政治担忧，可能会特别不稳定”。
 
 
-"Given tight polling margins in swing states, our base case is that an election delay could last days or even weeks," they wrote.
+"Given tight polling margins in swing states, our base case is that an election delay could last days or even weeks," they wrote.  
+他们写道：“鉴于摇摆州的民调差距很小，我们的基本假设是选举延迟可能会持续数天甚至数周。
 
 
-The 2020 election saw the VIX spike 40%.
+The 2020 election saw the VIX spike 40%.  
+2020 年选举见证了 VIX 飙升 40%。
 
 
-Cboe Stock Action
------------------
+Cboe Stock Action Cboe 股票行动
+---------------------------
 
 
-Cboe stock rose 1.3% to 211.99 on Monday, following a Friday test of its 50-day moving average. A move past last week's high of 213.05 would offer an early entry opportunity.
+Cboe stock rose 1.3% to 211.99 on Monday, following a Friday test of its 50-day moving average. A move past last week's high of 213.05 would offer an early entry opportunity.  
+芝加哥期权交易所（Cboe）股价周一上涨1.3%，至211.99点，此前周五测试了其50天移动平均线。突破上周高点 213.05 将提供提前入场的机会。
 
 
-Shares have a traditional 216.14 buy point from an eight-week [flat base](https://www.investors.com/how-to-invest/investors-corner/chart-patterns-flat-base-dull-trade-positive-action/). The latest base is just above a prior consolidation, forging a bullish base-on-base pattern that is clear in a weekly MarketSurge chart.
+Shares have a traditional 216.14 buy point from an eight-week [flat base](https://www.investors.com/how-to-invest/investors-corner/chart-patterns-flat-base-dull-trade-positive-action/). The latest base is just above a prior consolidation, forging a bullish base-on-base pattern that is clear in a weekly MarketSurge chart.  
+股票有一个传统的 216.14 买入点，来自八周[flat base](https://www.investors.com/how-to-invest/investors-corner/chart-patterns-flat-base-dull-trade-positive-action/)。最新的底部略高于之前的盘整，形成了一个看涨的基地模式，这在每周 MarketSurge 图表中很明显。
 
 
-Be sure to read IBD's [The Big Picture](https://www.investors.com/category/market-trend/the-big-picture/) column after each trading day to get the latest on the prevailing stock market trend and what it means for your trading decisions.
+Be sure to read IBD's [The Big Picture](https://www.investors.com/category/market-trend/the-big-picture/) column after each trading day to get the latest on the prevailing stock market trend and what it means for your trading decisions.  
+请务必在每个交易日后阅读 IBD 的 [The Big Picture](https://www.investors.com/category/market-trend/the-big-picture/) 专栏，以了解当前股市趋势的最新信息及其对您的交易决策意味着什么。
 
 
-**YOU MIGHT ALSO LIKE:**
+**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
 
 
-[These Are The Best 5 Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
+[These Are The Best 5 Stocks To Buy And Watch Now  
+这些是最适合立即购买和观看的 5 只股票](https://www.investors.com/research/best-stocks-to-buy-now/)
 
 
-[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live Each Morning For Stock Tips Before The Open  
+每天早上加入 IBD Live，在开盘前获取股票提示](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
+[IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today  
+IBD Digital：立即解锁 IBD 的优质股票列表、工具和分析](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
 
