--- a/_columns/The_Big_Picture/zh-cn/2024-10-21.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-21.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Ends Mixed As Small Caps Disappoint The Hopeful; Expect This To Jump During Earnings
+  Stock Market Ends Mixed As Small Caps Disappoint The Hopeful; Expect This To Jump During Earnings	股市收盘涨跌互现，小盘股让有希望的人失望;预计这一数字在收益期间会跃升
 date: 2024-10-21 17:54 -0700
 author: DAVID SAITO-CHUNG
 ---
@@ -10,60 +10,75 @@ author: DAVID SAITO-CHUNG
 
 
 
-The stock market started a new week on mixed footing Monday. While technology stocks made a bid to extend a six-week winning streak, small caps did a face plant.
+The stock market started a new week on mixed footing Monday. While technology stocks made a bid to extend a six-week winning streak, small caps did a face plant.  
+周一，股市以喜忧参半的方式开始了新的一周。虽然科技股试图延续六周的连涨势头，但小盘股却大放异彩。
 
 
 
 
-The Nasdaq composite rose nearly 0.3% on Monday. Not far behind, the Invesco QQQ Trust ([QQQ](https://research.investors.com/quote.aspx?symbol=QQQ)) exchange traded fund ended the day up nearly 0.2%. The fund tracks the 100 largest nonfinancial stocks on the Nasdaq.
+The Nasdaq composite rose nearly 0.3% on Monday. Not far behind, the Invesco QQQ Trust ([QQQ](https://research.investors.com/quote.aspx?symbol=QQQ)) exchange traded fund ended the day up nearly 0.2%. The fund tracks the 100 largest nonfinancial stocks on the Nasdaq.  
+纳斯达克综合指数周一上涨近 0.3%。紧随其后的是 Invesco QQQ Trust （[QQQ](https://research.investors.com/quote.aspx?symbol=QQQ)） 交易所交易基金当天收盘上涨近 0.2%。该基金跟踪纳斯达克最大的 100 只非金融股票。
 
 
-Yet most of the other popular indexes could not end in the winners column.
+Yet most of the other popular indexes could not end in the winners column.  
+然而，大多数其他受欢迎的指数都不能以赢家列结尾。
 
 
-The worst performer? Small caps, as the Russell 2000 lost almost 1.6%. The S&P MidCap 400 sank 1.2%, significantly more than losses of 0.8% by the Dow Jones Industrial Average and a 0.2% slip by the S&P 500.
+The worst performer? Small caps, as the Russell 2000 lost almost 1.6%. The S&P MidCap 400 sank 1.2%, significantly more than losses of 0.8% by the Dow Jones Industrial Average and a 0.2% slip by the S&P 500.  
+表现最差的？小盘股，罗素 2000 指数下跌近 1.6%。标准普尔中型股 400 指数下跌 1.2%，远高于道琼斯工业平均指数 0.8% 的跌幅和标准普尔 500 指数 0.2% 的跌幅。
 
 
-Even the S&P SmallCap 600 — which most investing pros would agree has a more fundamentally sound collection of companies vs. the Russell 2000 in terms of earnings, profit margins and sales — had a rough Monday at the office. Its 1.7% decline wiped out gains made since Oct. 12. The drop also marked the 600's worst in a single session since a 1.7% slide on Sept. 6.
+Even the S&P SmallCap 600 — which most investing pros would agree has a more fundamentally sound collection of companies vs. the Russell 2000 in terms of earnings, profit margins and sales — had a rough Monday at the office. Its 1.7% decline wiped out gains made since Oct. 12. The drop also marked the 600's worst in a single session since a 1.7% slide on Sept. 6.  
+即使是标准普尔小盘股 600 指数——大多数投资专业人士都同意，在收益、利润率和销售额方面，与罗素 2000 指数相比，它拥有更基本健全的公司集合——在办公室度过了一个艰难的周一。其 1.7% 的跌幅抹去了自 10 月 12 日以来的涨幅。此次下跌也标志着 600 自 9 月 6 日下跌 1.7% 以来单日最差。
 
 
-A sharp rise in interest rates perhaps had a lot to do with Monday's motley picture.
+A sharp rise in interest rates perhaps had a lot to do with Monday's motley picture.  
+利率的急剧上升可能与周一的杂乱无章有很大关系。
 
 
-Stock Market: Small Caps Down As Yields Go Up
----------------------------------------------
+Stock Market: Small Caps Down As Yields Go Up股市：收益率上升，小盘股下跌
+-----------------------------------------------------------
 
 
-![](https://www.investors.com/wp-content/uploads/2024/10/MP102124.jpg)The yield on the key U.S. 10-year government bond climbed 10 basis points to 4.18%. That marked the highest close since July 26, according to Cboe Global Markets data.
+![](https://www.investors.com/wp-content/uploads/2024/10/MP102124.jpg)The yield on the key U.S. 10-year government bond climbed 10 basis points to 4.18%. That marked the highest close since July 26, according to Cboe Global Markets data.  
+关键的美国 10 年期政府债券收益率攀升 10 个基点至 4.18%。根据 Cboe Global Markets 的数据，这是自 7 月 26 日以来的最高收盘价。
 
 
-Perhaps the stock market is getting a stronger sense that the Federal Reserve is going to continue cutting interest rates to ensure an economic soft landing, but just not as aggressively as investors thought after the central bank cut the fed funds rate in September by half a point to a target range of 4.75%-5%.
+Perhaps the stock market is getting a stronger sense that the Federal Reserve is going to continue cutting interest rates to ensure an economic soft landing, but just not as aggressively as investors thought after the central bank cut the fed funds rate in September by half a point to a target range of 4.75%-5%.  
+也许股市越来越强烈地意识到美联储将继续降息以确保经济软着陆，但并不像投资者在 9 月份将联邦基金利率下调半个百分点至 4.75%-5% 的目标区间后想象的那么激进。
 
 
-That was the Fed's first outright move to ease monetary policy since the spring of 2020.
+That was the Fed's first outright move to ease monetary policy since the spring of 2020.  
+这是美联储自 2020 年春季以来首次直接放松货币政策。
 
 
-Go to a [MarketSurge daily chart](https://marketsurge.investors.com/?src=A012BF) and type in "0TNX" (0 as in zero), and you'll see the 10-year bond yield is now pressing against upside resistance at the 200-day moving average.
+Go to a [MarketSurge daily chart](https://marketsurge.investors.com/?src=A012BF) and type in "0TNX" (0 as in zero), and you'll see the 10-year bond yield is now pressing against upside resistance at the 200-day moving average.  
+转到 [MarketSurge 日线图](https://marketsurge.investors.com/?src=A012BF)并输入“0TNX”（0 代表零），您会看到 10 年期债券收益率现在正在 200 天移动平均线处压制上行阻力。
 
 
-Yields rise as bond prices go lower. The yield, or return, goes up as traders who seek to exit their positions sell to make bonds more attractive for would-be buyers.
+Yields rise as bond prices go lower. The yield, or return, goes up as traders who seek to exit their positions sell to make bonds more attractive for would-be buyers.  
+收益率随着债券价格走低而上升。随着寻求退出头寸的交易员抛售以使债券对潜在买家更具吸引力，收益率或回报会上升。
 
 
-Watch The Cost Of Money
------------------------
+Watch The Cost Of Money观看金钱成本
+-----------------------------
 
 
-It's common to see the Russell 2000, a bastion of smaller companies, sell off as the cost of money rises. A jump in interest rates, particularly on the long end of the yield curve, generally places pressure on economically sensitive firms.
+It's common to see the Russell 2000, a bastion of smaller companies, sell off as the cost of money rises. A jump in interest rates, particularly on the long end of the yield curve, generally places pressure on economically sensitive firms.  
+随着资金成本的上升，罗素 2000 指数（小公司的堡垒）被抛售是很常见的。利率的跳跃，尤其是收益率曲线的长端利率跃升，通常会给对经济敏感的公司带来压力。
 
 
 
-Think homebuilding, regional banks and cyclical companies. In fact, looking at the 20 worst performers among [IBD's 197 industry groups](https://www.investors.com/ibd-data-tables/) in the stock market on Monday, and many of them hailed from these sectors.
+Think homebuilding, regional banks and cyclical companies. In fact, looking at the 20 worst performers among [IBD's 197 industry groups](https://www.investors.com/ibd-data-tables/) in the stock market on Monday, and many of them hailed from these sectors.  
+想想住宅建筑、区域银行和周期性公司。事实上，看看周一股市 [IBD 的 197 个行业组中](https://www.investors.com/ibd-data-tables/)表现最差的 20 个，其中许多来自这些行业。
 
 
-According to early data, mobile building manufacturing, residential building, Southwest and Western banks, mortgage services, construction products, meat, apparel maker and discount retail stocks led the downside, each falling 2% or more on a price-related basis.
+According to early data, mobile building manufacturing, residential building, Southwest and Western banks, mortgage services, construction products, meat, apparel maker and discount retail stocks led the downside, each falling 2% or more on a price-related basis.  
+根据早期数据，移动建筑制造、住宅建筑、西南和西方银行、抵押贷款服务、建筑产品、肉类、服装制造商和折扣零售股领跌，与价格相关时均下跌 2% 或更多。
 
 
-Breadth was highly negative on the stock market. On the New York Stock Exchange, decliners surpassed risers by nearly 4-to-1, though it was much worse earlier in the day. Nasdaq losers beat winners on Monday by roughly 9-to-4.
+Breadth was highly negative on the stock market. On the New York Stock Exchange, decliners surpassed risers by nearly 4-to-1, though it was much worse earlier in the day. Nasdaq losers beat winners on Monday by roughly 9-to-4.  
+股市的 Breadth 高度负面。在纽约证券交易所，下跌股以近 4 比 1 的优势超过上涨股，尽管当天早些时候的情况要糟糕得多。纳斯达克的失败者周一以大约 9 比 4 击败了获胜者。
 
 
 
@@ -71,7 +86,8 @@ Breadth was highly negative on the stock market. On the New York Stock Exchange
 ---
 
 
-[**Also In IBD Big Picture: Did You See This Unusual Session On The Nasdaq?**](https://www.investors.com/market-trend/the-big-picture/stock-market-nasdaq-sp500-nvidia-stock-nvda-netflix-earnings/)
+[**Also In IBD Big Picture: Did You See This Unusual Session On The Nasdaq?  
+同样在 IBD Big Picture：您是否在纳斯达克看到了这个不寻常的交易时段？**](https://www.investors.com/market-trend/the-big-picture/stock-market-nasdaq-sp500-nvidia-stock-nvda-netflix-earnings/)
 
 
 
@@ -79,54 +95,67 @@ Breadth was highly negative on the stock market. On the New York Stock Exchange
 ---
 
 
-Over the next two weeks in the stock market, the majority of S&P 500 companies report quarterly results. Stocks often rise in expectation of rosy earnings and sales, and often sell right on the news.
+Over the next two weeks in the stock market, the majority of S&P 500 companies report quarterly results. Stocks often rise in expectation of rosy earnings and sales, and often sell right on the news.  
+在接下来的两周股市中，大多数标准普尔 500 指数公司将公布季度业绩。股票经常因预期乐观的收益和销售而上涨，并且经常在新闻中直接卖出。
 
 
-This phenomenon is hardly new. "Buy the rumor, sell the news" is extremely common behavior. Therefore, be extra careful about ponying up large amounts of cash to buy key stock market leaders right before their announcements.
+This phenomenon is hardly new. "Buy the rumor, sell the news" is extremely common behavior. Therefore, be extra careful about ponying up large amounts of cash to buy key stock market leaders right before their announcements.  
+这种现象并不新鲜。“买谣言，卖新闻”是极其常见的行为。因此，在主要股市领导者宣布之前，不要拿出大量现金购买他们，这要格外小心。
 
 
-A Great Tech Stock Lesson
--------------------------
+A Great Tech Stock Lesson科技股的精彩教训
+---------------------------------
 
 
-**Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) is a wonderful example of why it's often better to wait for earnings to come out and the post-reaction dust to settle before considering a tactical entry.
+**Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) is a wonderful example of why it's often better to wait for earnings to come out and the post-reaction dust to settle before considering a tactical entry.  
+**Meta Platforms** （[META）](https://research.investors.com/quote.aspx?symbol=META) 是一个很好的例子，说明为什么在考虑战术性入场之前，等待财报出来和反应后尘埃落定通常更好。
 
 
 
-On Oct. 11, 2023, the megacap social media play broke out of a base but its breakout past 326.20 lasted all but a day. It soon fell more than 8% below that buy point, forcing new buyers to cut losses. The downdraft occurred just as the Facebook and Instagram operator reported quarterly results.
+On Oct. 11, 2023, the megacap social media play broke out of a base but its breakout past 326.20 lasted all but a day. It soon fell more than 8% below that buy point, forcing new buyers to cut losses. The downdraft occurred just as the Facebook and Instagram operator reported quarterly results.  
+2023 年 10 月 11 日，大型股社交媒体游戏突破了底部，但其突破 326.20 持续了一天。它很快比该买入点下跌了 8% 以上，迫使新买家减少损失。下滑发生在 Facebook 和 Instagram 运营商报告季度业绩之际。
 
 
-Yet the stock snapped back bullishly. In both November and December that year, Meta rebounded and took out that 326.20 former entry without forming a full-fledged base.
+Yet the stock snapped back bullishly. In both November and December that year, Meta rebounded and took out that 326.20 former entry without forming a full-fledged base.  
+然而，该股反弹看涨。在那年 11 月和 12 月，Meta 都反弹并拿下了 326.20 的前条目，但没有形成成熟的基础。
 
 
-Since then, Meta has sharply outperformed. It's gained as much as 85% from the 326.20 original entry to a new high of 602.95. Meanwhile, the S&P 500 has advanced a healthy 40% since the end of October 2023.
+Since then, Meta has sharply outperformed. It's gained as much as 85% from the 326.20 original entry to a new high of 602.95. Meanwhile, the S&P 500 has advanced a healthy 40% since the end of October 2023.  
+从那时起，Meta 的表现急剧优于大盘。它从最初的 326.20 入口上涨了 85% 至 602.95 的新高。与此同时，标准普尔 500 指数自 2023 年 10 月底以来已健康上涨 40%。
 
 
-Meta is currently a full-size position in the [Leaderboard model stock portfolio](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint). Leaderboard, on a portfolio-weighted basis, gained more than 30% through the fiscal year ended June 30.
+Meta is currently a full-size position in the [Leaderboard model stock portfolio](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint). Leaderboard, on a portfolio-weighted basis, gained more than 30% through the fiscal year ended June 30.  
+Meta 目前是 [Leaderboard 模型股票投资组合](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint)中的全尺寸头寸。在截至 6 月 30 日的财年中，按投资组合加权计算，排行榜上涨了 30% 以上。
 
 
-[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_102124..pdf)
+[View General Market Indicator charts page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_102124..pdf)
 
 
-*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)  
+*请在 X/Twitter 上关注 Chung：*[*@saitochung*](https://twitter.com/SaitoChung) *和* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
 
 
-**YOU MIGHT ALSO LIKE:**
+**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
 
 
-[The Latest IBD Podcast](https://get.investors.com/podcast/?src=A00511A)
+[The Latest IBD Podcast 最新的 IBD 播客](https://get.investors.com/podcast/?src=A00511A)
 
 
-[Find Best Growth Stocks Via IBD's Most Stringent Screen](https://research.investors.com/stock-lists/sector-leaders)
+[Find Best Growth Stocks Via IBD's Most Stringent Screen  
+通过 IBD 最严格的筛选找到最佳成长型股票](https://research.investors.com/stock-lists/sector-leaders)
 
 
-[Inside IBD Big Cap 20](https://research.investors.com/stock-lists/big-cap-20/)
+[Inside IBD Big Cap 20  
+IBD 大盘股 20 内部](https://research.investors.com/stock-lists/big-cap-20/)
 
 
-[IBD Live: A New Tool For Daily Stock Market Analysis](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[IBD Live: A New Tool For Daily Stock Market Analysis  
+IBD Live：每日股市分析的新工具](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[Investor's Corner: When To Sell Your Portfolio Losers Quickly](https://www.investors.com/how-to-invest/investors-corner/top-growth-stock-golden-sell-rule-when-take-losses-fast/)
+[Investor's Corner: When To Sell Your Portfolio Losers Quickly  
+投资者角：何时快速出售您的投资组合亏损者](https://www.investors.com/how-to-invest/investors-corner/top-growth-stock-golden-sell-rule-when-take-losses-fast/)
 
 
 
