--- a/_columns/Swing_Trading/zh-cn/2024-10-18.md
+++ b/_columns/Swing_Trading/zh-cn/2024-10-18.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  SharkNinja Stock: A Swing Trade Worth Holding
+  SharkNinja Stock: A Swing Trade Worth Holding	SharkNinja 股票：值得持有的波段交易
 date: 2024-10-18 16:44 -0700
 image: /assets/img/swing-trading/2024-10-18.jpg
 author: JUSTIN NIELSEN
@@ -11,25 +11,30 @@ author: JUSTIN NIELSEN
 
 
 
-Normally with swing trading we measure our holding time in days or weeks. But in some instances, the holding time can extend to months. That was the case for a recent swing trade in SharkNinja. What decides how long you hold? Often it's a combination of the stock and the market environment.
+Normally with swing trading we measure our holding time in days or weeks. But in some instances, the holding time can extend to months. That was the case for a recent swing trade in SharkNinja. What decides how long you hold? Often it's a combination of the stock and the market environment.  
+通常，在波段交易中，我们以天或周为单位来衡量我们的持有时间。但在某些情况下，持有时间可能会延长至数月。SharkNinja 最近的波段交易就是这种情况。什么决定你持有多长时间？通常是股票和市场环境的结合。
 
 
 
 
-An Earnings Pop And Pause For SharkNinja
-----------------------------------------
+An Earnings Pop And Pause For SharkNinjaSharkNinja 的收益爆裂和暂停
+-----------------------------------------------------------
 
 
-Strong moves are worth watching. **SharkNinja** ([SN](https://research.investors.com/quote.aspx?symbol=SN)) blasted through a flat-base buy point on a 17% gap-up on its last earnings report **(1)**. The strong move launched its [relative strength line](https://www.investors.com/how-to-invest/investors-corner/a-stock-breakout-specialty-tool-the-relative-strength-line/) to new highs along with the price. [IBD's Leaderboard](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) had an earnings option position that put it up nicely for the day. But what if you didn't have any exposure? Rather than chase a stock on a gap-up, we often prefer to wait to see how it handles itself over the next week or so.
+Strong moves are worth watching. **SharkNinja** ([SN](https://research.investors.com/quote.aspx?symbol=SN)) blasted through a flat-base buy point on a 17% gap-up on its last earnings report **(1)**. The strong move launched its [relative strength line](https://www.investors.com/how-to-invest/investors-corner/a-stock-breakout-specialty-tool-the-relative-strength-line/) to new highs along with the price. [IBD's Leaderboard](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) had an earnings option position that put it up nicely for the day. But what if you didn't have any exposure? Rather than chase a stock on a gap-up, we often prefer to wait to see how it handles itself over the next week or so.  
+强劲的走势值得关注。**SharkNinja** （[SN）](https://research.investors.com/quote.aspx?symbol=SN) 在上一份收益报告中跳空上涨了 17%，突破了平坦的买入点 **（1）。**强劲的走势将其[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/a-stock-breakout-specialty-tool-the-relative-strength-line/)与价格一起推至新高。[IBD 的排行榜](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)有一个收益期权位置，这在当天表现良好。但是，如果您没有任何曝光怎么办？与其在跳空上涨时追逐一只股票，我们通常更愿意等待，看看它在接下来的一周左右如何处理自己。
 
 
-SharkNinja gapped up again the next day **(2)** but then hardly gave up any ground over the next couple of weeks. After a three-day drift lower and an upside reversal, we initiated a half position on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) **(3)**.
+SharkNinja gapped up again the next day **(2)** but then hardly gave up any ground over the next couple of weeks. After a three-day drift lower and an upside reversal, we initiated a half position on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) **(3)**.  
+SharkNinja 第二天 **（2）** 再次跳空，但在接下来的几周内几乎没有放弃任何失地。在连续三天走低和上行反转后，我们在 [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) 上建立了半仓**（3）。**
 
 
-Using the low of the entry day as a stop was a little tight, just 1.6%. Instead, we used the low of Aug. 9 since that contained the move **(2)**.
+Using the low of the entry day as a stop was a little tight, just 1.6%. Instead, we used the low of Aug. 9 since that contained the move **(2)**.  
+使用入场日的低点作为止损有点紧，只有 1.6%。相反，我们使用了 8 月 9 日的低点，因为它包含走势 **（2）。**
 
 
-SharkNinja had another drift down of three days followed by another upside reversal **(4)**. We used the opportunity to add a quarter position once we had a roughly 1% gain. Once the stock cleared resistance above 92, we rounded out the position with another quarter add **(5)**.
+SharkNinja had another drift down of three days followed by another upside reversal **(4)**. We used the opportunity to add a quarter position once we had a roughly 1% gain. Once the stock cleared resistance above 92, we rounded out the position with another quarter add **(5)**.  
+SharkNinja 再次下跌三天，然后又一次上行反转 **（4）。**我们利用这个机会在获得大约 1% 的收益后增加了四分之一的位置。一旦股票清除了 92 上方的阻力位，我们又增加了四分之一 **（5）。**
 
 
 
@@ -37,7 +42,8 @@ SharkNinja had another drift down of three days followed by another upside rever
 ---
 
 
-[**Mark Minervini shares his counterintuitive strategy for dealing with volatility**](https://www.investors.com/ibd-videos/videos/why-minervini-calls-volatility-this-markets-comet-in-the-sky-moment)
+[**Mark Minervini shares his counterintuitive strategy for dealing with volatility  
+Mark Minervini 分享了他应对波动性的反直觉策略**](https://www.investors.com/ibd-videos/videos/why-minervini-calls-volatility-this-markets-comet-in-the-sky-moment)
 
 
 
@@ -45,45 +51,55 @@ SharkNinja had another drift down of three days followed by another upside rever
 ---
 
 
-It's important that each buy was at a higher level. We don't average down. Also, we go with fewer shares at the higher prices. That helps avoid spiking your average cost up too much. The end result was that after three purchases we had a full position and an average cost around 91, less than 1% away from our initial entry.
+It's important that each buy was at a higher level. We don't average down. Also, we go with fewer shares at the higher prices. That helps avoid spiking your average cost up too much. The end result was that after three purchases we had a full position and an average cost around 91, less than 1% away from our initial entry.  
+重要的是，每次购买都处于更高的水平。我们不会平均下降。此外，我们以更高的价格选择更少的股票。这有助于避免您的平均成本飙升太多。最终结果是，在三次购买后，我们获得了全额头寸，平均成本约为 91，与我们最初的进入市场相差不到 1%。
 
 
-Locking In Gains While You Have Them
-------------------------------------
+Locking In Gains While You Have Them在拥有收益时锁定收益
+----------------------------------------------
 
 
-As SharkNinja moved higher, it acted in an orderly fashion finding support at its 10-day moving average line along the way. Still, we started locking in some profits on a quarter of the position after a nearly 15% gain from our initial entry **(6)**.
+As SharkNinja moved higher, it acted in an orderly fashion finding support at its 10-day moving average line along the way. Still, we started locking in some profits on a quarter of the position after a nearly 15% gain from our initial entry **(6)**.  
+随着 SharkNinja 走高，它以有序的方式行事，沿途在其 10 天移动平均线找到支撑。尽管如此，在最初入场 **（6）** 获得近 15% 的收益后，我们开始锁定四分之一头寸的部分利润。
 
 
-After pausing and dropping slightly, we took off another quarter **(7)** and then one more quarter after it popped to new highs **(8)**. With our position down to a quarter size and a lot of cushion, we could give the remainder some room before we decided to lock in the final profit.
+After pausing and dropping slightly, we took off another quarter **(7)** and then one more quarter after it popped to new highs **(8)**. With our position down to a quarter size and a lot of cushion, we could give the remainder some room before we decided to lock in the final profit.  
+在暂停和略微下跌后，我们又起飞了一个季度 **（7），**然后在它创下新高 **（8）** 后又起飞了一个季度。由于我们的头寸缩小到四分之一的规模和大量的缓冲，我们可以在我们决定锁定最终利润之前给剩余部分一些空间。
 
 
-But after a one-week pause we decided to add back a quarter after the stock gapped up to new highs again **(9)**. Yes we were adding at a higher price than our last sell, but it was a small amount so still had plenty of cushion from our average cost.
+But after a one-week pause we decided to add back a quarter after the stock gapped up to new highs again **(9)**. Yes we were adding at a higher price than our last sell, but it was a small amount so still had plenty of cushion from our average cost.  
+但在暂停一周后，我们决定在股价再次跳空升至新高后回购一个季度 **（9）。**是的，我们以比上次销售更高的价格添加，但金额很小，因此我们的平均成本仍然有足够的缓冲。
 
 
-A Final Exit
-------------
+A Final Exit 最后的出口
+------------------
 
 
-Once SharkNinja seemed to have trouble around 110, we exited the remaining position a quarter at a time. We started with our recent add while it was still up **(10)** and then exited the remainder on the day it [closed below its 10-day line for the first time since our entry](https://www.investors.com/how-to-invest/investors-corner/use-the-10-day-moving-average-to-get-ahead-of-sell-signals/) **(11)**. The nine-week trade was on the longer side but a 12% gain on a full position size gives you enough of a portfolio boost to make it worth the wait.
+Once SharkNinja seemed to have trouble around 110, we exited the remaining position a quarter at a time. We started with our recent add while it was still up **(10)** and then exited the remainder on the day it [closed below its 10-day line for the first time since our entry](https://www.investors.com/how-to-invest/investors-corner/use-the-10-day-moving-average-to-get-ahead-of-sell-signals/) **(11)**. The nine-week trade was on the longer side but a 12% gain on a full position size gives you enough of a portfolio boost to make it worth the wait.  
+一旦 SharkNinja 在 110 附近似乎遇到了麻烦，我们一次退出剩余位置四分之一。我们从最近的增持开始，当时它仍然上涨 **（10），**然后在它[收于 10 天线以下](https://www.investors.com/how-to-invest/investors-corner/use-the-10-day-moving-average-to-get-ahead-of-sell-signals/)的那一天退出剩余部分，这是我们自进入以来的第一次 **（11）。**为期 9 周的交易偏长，但完整头寸规模的 12% 收益为您提供了足够的投资组合提升，值得等待。
 
 
-*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).*
+*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).  
+SwingTrader 的订阅者和试用者可以访问有关过去交易的更多详细信息。提供[免费试用](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。在 X 上关注尼尔森，前身为 Twitter，网址为 [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen)。*
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
+[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.  
+想知道我们的波段交易策略吗？观看此每周更新。](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
 
 
-[Jon Najarian Talks About A Volatile October And How To Avoid Getting Tricked.](https://www.investors.com/ibd-videos/videos/najarian-how-to-avoid-getting-scared-out-of-market-filled-with-tricks-treats)
+[Jon Najarian Talks About A Volatile October And How To Avoid Getting Tricked.  
+乔恩·纳贾里安 （Jon Najarian） 谈论动荡的十月以及如何避免被骗。](https://www.investors.com/ibd-videos/videos/najarian-how-to-avoid-getting-scared-out-of-market-filled-with-tricks-treats)
 
 
-[How Weak Breadth Can Give You An Early Warning For Market Tops](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations)
+[How Weak Breadth Can Give You An Early Warning For Market Tops  
+弱广度如何为您提供市场顶部的早期预警](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations)
 
 
-[Follow Premarket And After-The-Open Action With IBD Experts](https://get.investors.com/ibd-live/)
+[Follow Premarket And After-The-Open Action With IBD Experts  
+跟随 IBD 专家的盘前和开盘后行动](https://get.investors.com/ibd-live/)
 
 
 
